# ocaml-exercism-cubicle

./: .gitignore  Dockerfile  Dockerfile-remote  README.md  debug-config.js  docker-compose.yml  dune-project  exercises.json  ocaml-exercism.opam
.bins/: dl
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
acronym/: .merlin  test.ml
all-your-base/: .merlin  test.ml
allergies/: .merlin  test.ml
anagram/: .merlin  test.ml
atbash-cipher/: .merlin  test.ml
beer-song/: .merlin  test.ml
binary-search/: .merlin  test.ml
bob/: .merlin  test.ml
bowling/: .merlin  test.ml
bracket-push/: .merlin
change/: .merlin  test.ml
connect/: .merlin  test.ml
custom-set/: .merlin  test.ml
difference-of-squares/: .merlin  test.ml
dominoes/: .merlin  test.ml
etl/: .merlin  test.ml
forth/: .merlin  test.ml
grade-school/: .merlin  test.ml
hamming/: .merlin  test.ml
hangman/: .merlin  test.ml
hello-world/: .merlin  test.ml
hexadecimal/: .merlin  test.ml
leap/: .merlin  test.ml
list-ops/: .merlin  test.ml
luhn/: .merlin  test.ml
matching-brackets/: .merlin  test.ml
meetup/: .merlin  test.ml
minesweeper/: .merlin  test.ml
nucleotide-count/: .merlin  test.ml
palindrome-products/: .merlin  palindrome_products.ml  test.ml
pangram/: .merlin  test.ml
phone-number/: .merlin  test.ml
prime-factors/: .merlin  test.ml
raindrops/: .merlin  raindrops.ml  test.ml
react/: .merlin  test.ml
rectangles/: .merlin  test.ml
rna-transcription/: .merlin  test.ml
robot-name/: .merlin  test.ml
(+42 files in other folders)
