opam-version: "2.0"
name: "ocaml-exercism"
maintainer: "Mario Nebl <hello@mario-nebl.de>"
authors: "Mario Nebl <hello@mario-nebl.de>"
homepage: "https://github.com/brainpower-org/ocaml-exercism-cubicle"
bug-reports: "https://github.com/brainpower-org/ocaml-exercism-cubicle/issues"
version: "0.1"
synopsis: "Work on the OCaml track of exercism in a turn-key environment"
depends: [ "ocaml" "ocamlfind" "dune" "ounit" "react" "core" "qcheck" "merlin" "ocp-indent" "utop" ]
